# bevy_asset_metadata_updater

./: Cargo.toml  LICENSE  README
src/: main.rs
